# ChocoC

./: .clang-format  CMakeLists.txt
include/: ASTVisitor.h  DiagnosticsManager.h  SymbolTable.h  TokenStream.h
include/ast/: ASTNode.h  ASTVisitor.h  AssignmentStatement.h  BinaryExpression.h  BinaryOpExpression.h  Block.h  CallExpression.h  ConstantExpression.h  Expression.h  GroupingExpression.h  Identifier.h  Literal.h  PrettyPrinter.h  Program.h  SimpleStatement.h  Statement.h  Target.h  Type.h  TypedVariable.h  UnaryExpression.h  VariableDefinition.h  WithLocation.h
include/codegen/: LLVM.h
include/diagnostics/: DiagID.h  DiagInfo.h  Diagnostic.h  DiagnosticsManager.h
include/ir/: LLVM.h  Variable.h
include/lexer/: Lexer.h  Token.h  TokenType.h
include/parser/: ExpressionKind.h  ExpressionParser.h  ParseContext.h  ParseResult.h  Parser.h
include/semantic/: SymbolTable.h  SymbolTableBuilder.h  Type.h  TypeChecker.h  TypeEnvironment.h  Variable.h
include/utility/: OptionalRef.h
src/: ASTVisitor.cpp  CMakeLists.txt  DiagnosticsManager.cpp  SymbolTable.cpp  TokenStream.cpp  chocopc.cpp
src/ast/: ASTVisitor.cpp  AssignmentStatement.cpp  BinaryExpression.cpp  Block.cpp  CallExpression.cpp  Expression.cpp  GroupingExpression.cpp  Identifier.cpp  Literal.cpp  PrettyPrinter.cpp  Program.cpp  Statement.cpp  Target.cpp  Type.cpp  UnaryExpression.cpp  VariableDefinition.cpp
src/diagnostics/: DiagInfo.cpp  DiagnosticsManager.cpp
src/ir/: LLVM.cpp
src/lexer/: Lexer.cpp  Token.cppm
src/parser/: ExpressionParser.cpp  Parser.cpp
src/semantic/: SymbolTable.cpp  SymbolTableBuilder.cpp  Type.cpp  TypeChecker.cpp  TypeEnvironment.cpp
tests/: CMakeLists.txt  test_lexer.cpp  test_parser.cpp  test_token.cpp  token.cpp
tests/input/: unexpected_character.chocopy  vardefs.golden
tests/input/lexer/: indentation.choco  integer_literals.choco  integer_literals.chocopy  operators.choco  string_literals.choco
tests/input/lexer/invalid/: integer_literals.choco  string_literals.choco
tests/input/lexer/valid/: integer_literals.choco  string_literals.choco
tests/input/parser/: binary_ops.choco  binary_ops.golden  operator_precedence.choco  operator_precedence.golden  unary_ops.choco  unary_ops.golden
